import React from 'react';
import { createBottomTabNavigator } from '@react-navigation/bottom-tabs';
import Icon from 'react-native-vector-icons/Ionicons';
import { ApiStatusIcon } from 'src/components/ApiStatusIcon';

import HomeScreen from '../screens/HomeScreen';
import SettingsScreen from '../screens/SettingsScreen';
import HistoryScreen from '../screens/HistoryScreen';
import StatisticsScreen from '../screens/StatisticsScreen';
import OpenRouterChatScreen from '../screens/OpenRouterChatScreen';

import { RootTabParamList } from './types';
import { useTheme } from 'src/theme/ThemeProvider';

const Tab = createBottomTabNavigator<RootTabParamList>();

const AppNavigator = () => {
  const { colors } = useTheme();

  return (
    <Tab.Navigator
      initialRouteName="Home"
      screenOptions={({ route }) => ({
        headerShown: true,
        tabBarActiveTintColor: colors.primary,
        tabBarInactiveTintColor: colors.inactive,
        tabBarStyle: { backgroundColor: colors.background },
        tabBarIcon: ({ focused, color, size }) => {
          let iconName = '';

          // prettier-ignore
          if (route.name === 'Home') 
            iconName = focused ? 'create' : 'create-outline';
          else if (route.name === 'History') 
            iconName = focused ? 'time' : 'time-outline';
          else if (route.name === 'Statistics') 
            iconName = focused ? 'stats-chart' : 'stats-chart-outline';
          else if (route.name === 'Settings') 
            iconName = focused ? 'settings' : 'settings-outline';

          return <Icon name={iconName} size={size} color={color} />;
        },
      })}
    >
      <Tab.Screen
        name="Home"
        component={HomeScreen}
        options={{ 
          title: 'Postar', 
          headerRight: () => <ApiStatusIcon />,
          tabBarTestID: 'home-tab-button'
        }}
      />
      <Tab.Screen
        name="History"
        component={HistoryScreen}
        options={{ 
          title: 'Histórico', 
          headerRight: () => <ApiStatusIcon />,
          tabBarTestID: 'history-tab-button'
        }}
      />
      <Tab.Screen
        name="Statistics"
        component={StatisticsScreen}
        options={{ 
          title: 'Estatísticas', 
          headerRight: () => <ApiStatusIcon />,
          tabBarTestID: 'statistics-tab-button'
        }}
      />
      <Tab.Screen
        name="Settings"
        component={SettingsScreen}
        options={{ 
          title: 'Configurações', 
          headerRight: () => <ApiStatusIcon />,
          tabBarTestID: 'settings-tab-button'
        }}
      />
      <Tab.Screen
        name="OpenRouterChat"
        component={OpenRouterChatScreen}
        options={{
          title: 'Sugestões',
          headerShown: false,
          tabBarButton: () => null,
          tabBarItemStyle: { display: 'none' },
          tabBarStyle: { display: 'none' },
        }}
      />
    </Tab.Navigator>
  );
};

export default AppNavigator;
